# avro

./: CMakeLists.txt
lang/c/: CMakeLists.txt
lang/c/src/: avro_private.h  avroappend.c  codec.c  dump.h  schema.c  st.h
lang/c/src/avro/: msstdint.h
